Update and rename interactive.html to index.html

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="intstyle.css"> 
   <script src = "interactive.js" defer></script>
 
-  <script src="../lib/d3.v5.min.js"></script>
-  <script src="../lib/d3-tip.min.js"></script>
+  <script src="//d3js.org/d3.v5.js"></script>
+  <script src="//d3js.org/d3-tip.min.js"></script>
 
 
  
